--- a/app/src/main/res/xml/path_provider.xml
+++ b/app/src/main/res/xml/path_provider.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <external-cache-path
-        name="my_images"
-        path="/"/>
-
-</paths>
+<file_paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-files-path name="my_images" path="/" />
+</file_paths>
