--- a/app/src/main/res/xml/path_provider.xml
+++ b/app/src/main/res/xml/path_provider.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<file_paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-files-path name="my_images" path="/" />
-</file_paths>
+<path_provider xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-files-path
+        name="my_images"
+        path="/" />
+</path_provider>
